project update new

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://arashammarlooi.github.io/VideoScrolingView",
   "name": "application-name",
   "version": "0.0.1",
   "resolutions": {
